MB-11778: Disconnect if upr no-ops are not received on consumer side

Right now we don't check on the consumer side to make sure that the
connection is still active. This change allows us to disconnect the
consumer if the producer stops sending messages.

Change-Id: I02019d6c9390a4d85e0af053e31a29b188ff1d64
Reviewed-on: http://review.couchbase.org/39683
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>